@@ -1,0 +1,13 @@
+-pbp     # Start with Perl Best Practices
+-nst     # undo -st from -pbp, to allow for command line use
+-w       # Show all warnings
+-iob     # Ignore old breakpoints
+-l=80    # 80 characters per line
+-mbl=2   # No more than 2 blank lines
+-i=4     # Indentation is 4 columns
+-ci=4    # Continuation indentation is 4 columns
+-vt=0    # Less vertical tightness
+-pt=2    # High parenthesis tightness
+-bt=2    # High brace tightness
+-sbt=2   # High square bracket tightness
+-isbc    # Don't indent comments without leading space
