@@ -2,36 +2,33 @@ use strict;
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-    NAME	 => 'HTML::Parser',
-    VERSION_FROM => 'Parser.pm',
+    NAME          => 'HTML::Parser',
+    VERSION_FROM  => 'Parser.pm',
     ABSTRACT_FROM => 'Parser.pm',
-    AUTHOR       => 'Gisle Aas <gisle@activestate.com>',
-    LICENSE	 => 'perl',
+    AUTHOR        => 'Gisle Aas <gisle@activestate.com>',
+    LICENSE       => 'perl',
 
     MIN_PERL_VERSION => 5.008,
-    PREREQ_PM    => {
-		      'HTML::Tagset' => 3,
-		      'XSLoader' => 0,
-                    },
-    META_MERGE   => {
-        build_requires => { 'Test::More' => 0 },
-        recommends => { 'HTTP::Headers' => 0 },
-        resources => {
-            repository => 'http://github.com/gisle/html-parser',
-	    MailingList => 'mailto:libwww@perl.org',
+    PREREQ_PM        => {'HTML::Tagset' => 3, 'XSLoader' => 0,},
+    META_MERGE       => {
+        build_requires => {'Test::More'    => 0},
+        recommends     => {'HTTP::Headers' => 0},
+        resources      => {
+            repository  => 'https://github.com/libwww-perl/HTML-Parser',
+            MailingList => 'mailto:libwww@perl.org',
         }
     },
 
-    DEFINE       => "-DMARKED_SECTION",
-    H            => [ "hparser.h", "hctype.h", "tokenpos.h", "pfunc.h",
-		      "hparser.c", "util.c",
-		    ],
-    clean        => { FILES => 'hctype.h pfunc.h' },
+    DEFINE => "-DMARKED_SECTION",
+    H      => [
+        "hparser.h", "hctype.h", "tokenpos.h", "pfunc.h",
+        "hparser.c", "util.c",
+    ],
+    clean => {FILES => 'hctype.h pfunc.h'},
 );
 
 
-sub MY::postamble
-{
+sub MY::postamble {
     '
 pfunc.h : mkpfunc
 	$(PERLRUN) mkpfunc >pfunc.h
@@ -44,10 +41,10 @@ hctype.h : mkhctype
 BEGIN {
     # compatibility with older versions of MakeMaker
     my $developer = -f "MANIFEST.SKIP";
-    my %mm_req = (
-        LICENCE => 6.31,
-        META_MERGE => 6.45,
-        META_ADD => 6.45,
+    my %mm_req    = (
+        LICENCE          => 6.31,
+        META_MERGE       => 6.45,
+        META_ADD         => 6.45,
         MIN_PERL_VERSION => 6.48,
     );
     undef(*WriteMakefile);
